# tauroboros

./: .env  .gitignore  AGENTS.md  CHANGES_SUMMARY.md  CLAUDE.md  CODE_STYLE_TEST_SUMMARY.md  README.md  bunfig.toml  env.example  options-modal-checkboxes.json  package-lock.json  package.json  playwright.config.ts  start-dev.sh  start-rust-dev.sh  start.sh  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  workflow-stop-pause-implementation-audit.md
.pi/: settings.json
docs/: EFFECT_ARCHITECTURE.md  SKILLS.md  bubblewrap-isolation.md  container-isolation.md
mock-llm-server/: Dockerfile  package-lock.json
plans/: bubblewrap-isolation-plan.md  e2e-mock-llm-implementation.md  effect-full-migration-plan.md  fix-self-healing.md  gvisor-isolation-plan.md  kanban-features-implementation.md  kanban-vue-migration-plan.md  kysely-migration.md  multi-workflow-parallel-execution.md  one-container-per-task.md  per-task-container-images.md  pre-execution-git-snapshots.md  rust-backend-parity-plan.md  structured-agent-output.md  tabbed-main-area.md  ui-chat-bug-fixes-implementation.md  workflow-run-clean-feature.md  workflow-stop-pause-implementation-plan.md  worktree-failure-analysis.html
scripts/: compile.ts  generate-embedded-assets.ts  generate-version.ts  install.sh  run-tests.ts  setup-e2e-tests.sh  start-playwright-ui.sh  sync-skills.ts  test-binary.ts  verify-migration.ts  verify-podman.ts  verify-setup.ts
src/: db.ts  execution-plan.ts  index.ts  orchestrator.ts  resource-extractor.ts  server.ts  task-state.ts  telegram.ts  types.ts
src/backend/: .env.example  Cargo.toml  README.md  build.rs
src/backend/prompts/: prompt-catalog.json
src/backend/src/: audit.rs  embedded_resources.rs  error.rs  internal_api.rs  main.rs  models.rs  prompt_catalog.rs  settings.rs  state.rs
src/backend/src/db/: mod.rs  models.rs  queries.rs  runtime.rs
src/backend/src/orchestrator/: best_of_n.rs  extensions.rs  git.rs  isolation.rs  mod.rs  pi.rs  plan_mode.rs  planning_session.rs  prompts.rs  review.rs  run_lifecycle.rs  scheduling.rs  task_execution.rs  task_selection.rs  types.rs
src/backend/src/routes/: console.rs  execution.rs  frontend.rs  mod.rs  options.rs  planning.rs  reference.rs  sessions.rs  sse.rs  stats.rs  task_groups.rs
src/backend/src/routes/tasks/: best_of_n.rs  diff.rs  mod.rs
src/backend/src/sse/: hub.rs
tauroboros-rust/: Cargo.toml  build.rs
tauroboros-rust/src/: audit.rs  cors.rs  error.rs  main.rs  models.rs  settings.rs  state.rs
tauroboros-rust/src/db/: mod.rs  models.rs  queries.rs  runtime.rs
tauroboros-rust/src/orchestrator/: best_of_n.rs  git.rs  mod.rs  pi.rs  plan_mode.rs  planning_session.rs  review.rs
tauroboros-rust/src/routes/: archived.rs  containers.rs  execution.rs  frontend.rs  mod.rs  options.rs  planning.rs  prompts.rs  reference.rs  runs.rs  sessions.rs  sse.rs  stats.rs  task_groups.rs  tasks.rs  workflow.rs
tauroboros-rust/src/routes/tasks/: best_of_n.rs  mod.rs  repair.rs
tauroboros-rust/src/sse/: hub.rs  mod.rs
tests/: archived-api.test.ts  best-of-n.test.ts  code-style-feature-test-report.md  code-style-orchestrator-integration.test.ts  code-style-prompt.test.ts  codestyle-session.test.ts  collect-events-timeout.test.ts  context-auto-compact-integration.test.ts  date-format.test.ts  db.test.ts  e2e-setup.sh  effect-http-boundary.test.ts  execution.test.ts  frontend-store-boundaries.test.ts  gap1-dynamic-dependencies.test.ts  gap2-websocket-session-messages.test.ts  gap3-telegram-notifications.test.ts  group-execution.test.ts  run-e2e.sh  (+19 more)
(+504 files in other folders)
