[package]
name = "tauroboros-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[features]
default = []
embedded-frontend = ["dep:include_dir"]

[dependencies]
# Web framework
rocket = { version = "0.5.1", features = ["json"] }
include_dir = { version = "0.7", optional = true }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CORS
rocket_cors = "0.6"

# SSE / streaming events
futures = "0.3"
tokio-stream = "0.1"

# Hashing (for packages)
sha2 = "0.10"
hex = "0.4"
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "tauroboros-server"
path = "src/main.rs"
