[package]
name = "tauroboros-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
resolver = "2"

[dependencies]
# Web framework
rocket = { version = "0.5.1", features = ["json"] }
include_dir = { version = "0.7" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Environment variables
dotenvy = "0.15"

# Logging - without env-filter for faster compile
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt"] }

# CORS
rocket_cors = "0.6"

# SSE / streaming events
futures = "0.3"
tokio-stream = "0.1"

# Hashing (for packages)
sha2 = "0.10"
hex = "0.4"

# PTY for interactive console
portable-pty = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }
rocket_ws = { version = "0.1", optional = true }
# Use system libgit2 instead of vendored for faster compile
git2 = { version = "0.20" }

[profile.dev]
# Optimize for faster compilation while keeping some optimizations
opt-level = 0
# No debug info for fastest compilation (tradeoff: no backtraces)
debug = false
# Use split debuginfo for faster linking
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
# More codegen units = more parallel compilation
codegen-units = 256
# Disable Link Time Optimization for faster builds
lto = false
# Use incremental compilation
incremental = true

# Optimize build scripts and proc-macros for faster compile
[features]
default = ["console", "embedded-frontend"]
console = ["dep:portable-pty", "dep:base64", "dep:rocket_ws"]
embedded-frontend = []

[profile.dev.build-override]
opt-level = 0
codegen-units = 256
debug = true

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "tauroboros"
path = "src/main.rs"
